<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.form">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="229dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvInterest"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/Interest"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtLname"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtLname"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="353dp"
        android:layout_height="42dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="352dp"
        android:layout_height="48dp"
        android:layout_marginTop="247dp"
        android:ems="10"
        android:hint="Age"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="352dp"
        android:layout_height="45dp"
        android:layout_marginTop="313dp"
        android:ems="10"
        android:hint="Phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtExperience"
        android:layout_width="353dp"
        android:layout_height="42dp"
        android:layout_marginTop="384dp"
        android:ems="10"
        android:hint="Years Of Experience"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvSalary"
        android:layout_width="353dp"
        android:layout_height="42dp"
        android:layout_marginTop="455dp"
        android:ems="10"
        android:hint="Gross Salary Exception"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtQual"
        android:layout_width="356dp"
        android:layout_height="45dp"
        android:layout_marginTop="516dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Qualifications"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSaveData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtQual"
        app:layout_constraintVertical_bias="0.221" />


</androidx.constraintlayout.widget.ConstraintLayout>